--- a/web/app/themes/meghan/resources/css/app.scss
+++ b/web/app/themes/meghan/resources/css/app.scss
@@ -1,7 +1,9 @@
+@use 'tailwindcss/preflight.css';
 @use "./fonts.scss";
 @use './colours.scss';
-@use 'tailwindcss/preflight.css';
-@use "./views/sections/header.scss";
+@use './views/sections/_sections.scss';
+@use './views/partials/_partials.scss';
+@use './views/layouts/layouts.scss';
 
 :root {
     /* 13px - 16px */
@@ -66,6 +68,8 @@
 
 html {
     scroll-behavior: smooth;
+    color: var(--bodyTextColor);
+    background-color: var(--white);
 }
 
 
